// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`buildWorkerBwrapArgv composes the Claude managed-credential bind table 1`] = `
[
  "--die-with-parent",
  "--new-session",
  "--unshare-user",
  "--unshare-pid",
  "--uid",
  "0",
  "--gid",
  "0",
  "--tmpfs",
  "/",
  "--dir",
  "/repo",
  "--dir",
  "/repo/.buildd-worktrees",
  "--dir",
  "/usr",
  "--dir",
  "/etc",
  "--dir",
  "/home",
  "--dir",
  "/home/runner",
  "--dir",
  "/home/runner/.bun",
  "--dir",
  "/home/runner/.bun/install",
  "--dir",
  "/tmp",
  "--dir",
  "/opt",
  "--dir",
  "/shared",
  "--proc",
  "/proc",
  "--dev",
  "/dev",
  "--tmpfs",
  "/dev/shm",
  "--tmpfs",
  "/tmp",
  "--ro-bind",
  "/sys",
  "/sys",
  "--bind",
  "/repo/.buildd-worktrees/task",
  "/repo/.buildd-worktrees/task",
  "--ro-bind",
  "/repo/.git",
  "/repo/.git",
  "--ro-bind",
  "/usr",
  "/usr",
  "--ro-bind",
  "/bin",
  "/bin",
  "--ro-bind",
  "/lib",
  "/lib",
  "--ro-bind",
  "/lib64",
  "/lib64",
  "--ro-bind",
  "/usr/local",
  "/usr/local",
  "--ro-bind",
  "/etc/ssl",
  "/etc/ssl",
  "--ro-bind",
  "/etc/resolv.conf",
  "/etc/resolv.conf",
  "--ro-bind",
  "/etc/nsswitch.conf",
  "/etc/nsswitch.conf",
  "--ro-bind",
  "/home/runner/.bun",
  "/home/runner/.bun",
  "--bind",
  "/home/runner/.bun/install/cache",
  "/home/runner/.bun/install/cache",
  "--bind",
  "/home/runner/.npm",
  "/home/runner/.npm",
  "--bind",
  "/tmp/claude-cfg-worker",
  "/tmp/claude-cfg-worker",
  "--ro-bind",
  "/opt/custom",
  "/opt/custom",
  "--bind",
  "/shared/cache",
  "/shared/cache",
]
`;

exports[`buildWorkerBwrapArgv composes the Codex bind table without Claude credentials 1`] = `
[
  "--die-with-parent",
  "--new-session",
  "--unshare-user",
  "--unshare-pid",
  "--uid",
  "0",
  "--gid",
  "0",
  "--tmpfs",
  "/",
  "--dir",
  "/repo",
  "--dir",
  "/repo/.buildd-worktrees",
  "--dir",
  "/usr",
  "--dir",
  "/etc",
  "--dir",
  "/custom",
  "--dir",
  "/custom/bun",
  "--dir",
  "/custom/bun/install",
  "--dir",
  "/home",
  "--dir",
  "/home/runner",
  "--dir",
  "/tmp",
  "--dir",
  "/tmp/buildd-codex-homes",
  "--proc",
  "/proc",
  "--dev",
  "/dev",
  "--tmpfs",
  "/dev/shm",
  "--tmpfs",
  "/tmp",
  "--ro-bind",
  "/sys",
  "/sys",
  "--bind",
  "/repo/.buildd-worktrees/task",
  "/repo/.buildd-worktrees/task",
  "--ro-bind",
  "/repo/.git",
  "/repo/.git",
  "--ro-bind",
  "/usr",
  "/usr",
  "--ro-bind",
  "/bin",
  "/bin",
  "--ro-bind",
  "/lib",
  "/lib",
  "--ro-bind",
  "/lib64",
  "/lib64",
  "--ro-bind",
  "/usr/local",
  "/usr/local",
  "--ro-bind",
  "/etc/ssl",
  "/etc/ssl",
  "--ro-bind",
  "/etc/resolv.conf",
  "/etc/resolv.conf",
  "--ro-bind",
  "/etc/nsswitch.conf",
  "/etc/nsswitch.conf",
  "--ro-bind",
  "/custom/bun",
  "/custom/bun",
  "--bind",
  "/custom/bun/install/cache",
  "/custom/bun/install/cache",
  "--bind",
  "/home/runner/.npm",
  "/home/runner/.npm",
  "--bind",
  "/tmp/buildd-codex-homes/worker",
  "/tmp/buildd-codex-homes/worker",
]
`;

exports[`buildWorkerBwrapArgv uses only local Claude credential files when no managed config exists 1`] = `
[
  "--die-with-parent",
  "--new-session",
  "--unshare-user",
  "--unshare-pid",
  "--uid",
  "0",
  "--gid",
  "0",
  "--tmpfs",
  "/",
  "--dir",
  "/repo",
  "--dir",
  "/usr",
  "--dir",
  "/etc",
  "--dir",
  "/home",
  "--dir",
  "/home/runner",
  "--dir",
  "/home/runner/.bun",
  "--dir",
  "/home/runner/.bun/install",
  "--dir",
  "/home/runner/.claude",
  "--proc",
  "/proc",
  "--dev",
  "/dev",
  "--tmpfs",
  "/dev/shm",
  "--tmpfs",
  "/tmp",
  "--ro-bind",
  "/sys",
  "/sys",
  "--bind",
  "/repo",
  "/repo",
  "--ro-bind",
  "/repo/.git",
  "/repo/.git",
  "--ro-bind",
  "/usr",
  "/usr",
  "--ro-bind",
  "/bin",
  "/bin",
  "--ro-bind",
  "/lib",
  "/lib",
  "--ro-bind",
  "/lib64",
  "/lib64",
  "--ro-bind",
  "/usr/local",
  "/usr/local",
  "--ro-bind",
  "/etc/ssl",
  "/etc/ssl",
  "--ro-bind",
  "/etc/resolv.conf",
  "/etc/resolv.conf",
  "--ro-bind",
  "/etc/nsswitch.conf",
  "/etc/nsswitch.conf",
  "--ro-bind",
  "/home/runner/.bun",
  "/home/runner/.bun",
  "--bind",
  "/home/runner/.bun/install/cache",
  "/home/runner/.bun/install/cache",
  "--bind",
  "/home/runner/.npm",
  "/home/runner/.npm",
  "--ro-bind",
  "/home/runner/.claude/.credentials.json",
  "/home/runner/.claude/.credentials.json",
]
`;
